diktat fixes