@@ -5,6 +5,10 @@ configureVersioning()
 allprojects {
     configureDiktat()
     configureDetekt()
+
+    tasks.withType<org.cqfn.diktat.plugin.gradle.DiktatJavaExecTaskBase> {
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
 }
 
 createDetektTask()
